Ahora sí los cors están configurados xd